Update note for Feb 7 entry in data

--- a/personal_gift_website.html
+++ b/personal_gift_website.html
@@ -42,7 +42,7 @@ footer{padding:40px;font-size:14px;color:#777}
 const startDate=new Date('2026-02-07');
 const today=new Date();
 const data=[
-{day:'Feb 7',title:'Why You ❤️',img:'why_you.jpeg',note:'You are my fresh beginning, every single day.',extraImg:'one.jpeg',q:'Nickname I call you?',a:'ads'},
+{day:'Feb 7',title:'Why You ❤️',img:'why_you.jpeg',note:'This picture, this day never thought it would turn into this',extraImg:'one.jpeg',q:'Nickname I call you?',a:'ads'},
 {day:'Feb 8',title:'Comfort 🏠',img:'comfort.jpeg',note:'With you, everything feels like home.',extraImg:'comfortone.jpeg',q:'Our fav first song?',a:'rehna kol'},
 {day:'Feb 9',title:'Work 👩‍💻',img:'work.jpeg',note:'We build dreams together, step by step.',extraImg:'work_extra.jpeg',q:'The first complete project we worked on?',a:'cicdct'},
 {day:'Feb 10',title:'Strength 💪',img:'gym.jpeg',note:'Your strength motivates me to be better.',extraImg:'gym_extra.jpeg',q:'Which gym do I go to?',a:'sweat arena'},
