--- a/index.html
+++ b/index.html
@@ -63,6 +63,31 @@ footer{padding:40px;font-size:14px;color:#777}
 <p id="line" class="hidden">Made with love for my love 💌</p>
 </header>
 <section id="days" class="days hidden"></section>
+  <section class="timeline-section hidden" id="timeline">
+<h2 style="margin-top:30px">Our Little Timeline 💞</h2>
+<div class="timeline-scroll">
+<img src="t1.jpg" />
+<img src="t2.jpg" />
+<img src="t3.jpg" />
+<img src="t4.jpg" />
+<img src="t5.jpg" />
+<img src="t6.jpg" />
+<img src="t7.jpg" />
+<img src="t8.jpg" />
+<img src="t9.jpg" />
+<img src="t10.jpg" />
+<img src="t11.jpg" />
+<img src="t12.jpg" />
+<img src="t13.jpg" />
+<img src="t14.jpg" />
+<img src="t15.jpg" />
+<img src="t16.jpg" />
+<img src="t17.jpg" />
+<img src="t18.jpg" />
+<img src="t19.jpg" />
+<img src="t20.jpeg" />
+</div>
+</section>
 <footer id="signature" class="hidden">— From Aksss 💗</footer>
 <script>
 const startDate = new Date(); startDate.setHours(0,0,0,0); startDate.setDate(startDate.getDate() - (startDate.getDate() >= 7 ? (startDate.getDate() - 7) : 0));
@@ -87,5 +112,51 @@ ${d.extraImg?`<img src='${d.extraImg}' style='width:100%;max-width:320px;border-
 </div>`:`<p>Not yet 💌</p>`}`;c.appendChild(el);});}
 function check(i){const v=document.getElementById('ans'+i).value.toLowerCase().trim();if(v===data[i].a){document.getElementById('card'+i).classList.remove('hidden');event.target.parentElement.classList.add('hidden');}else{alert(i===data.length-1?'No 😌 Try again':'That’s not it 💔 Try again');}}
 </script>
+  <div id="lightbox" class="lightbox hidden" onclick="closeLightbox()">
+<img id="lightbox-img" src="" />
+</div>
+
+
+<script>
+// Add click event to timeline images after render
+setTimeout(()=>{
+document.querySelectorAll('.timeline-scroll img').forEach(img=>{
+img.addEventListener('click',()=>{
+document.getElementById('lightbox-img').src = img.src;
+document.getElementById('lightbox').classList.remove('hidden');
+});
+});
+},500);
+
+
+function closeLightbox(){
+document.getElementById('lightbox').classList.add('hidden');
+}
+</script>
+
+
+<style>
+.lightbox{
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+display:flex;
+align-items:center;
+justify-content:center;
+z-index:9999;
+padding:20px;
+}
+.lightbox img{
+max-width:95%;
+max-height:90%;
+border-radius:18px;
+box-shadow:0 20px 40px rgba(0,0,0,0.5);
+animation:zoomIn .3s ease;
+}
+@keyframes zoomIn{
+from{transform:scale(.8);opacity:0}
+to{transform:scale(1);opacity:1}
+}
+</style>
 </body>
 </html>
