--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ border-radius:10px;
   <section class="timeline-section hidden" id="timeline">
 <h2 style="margin-top:30px">Our Little Timeline 💞</h2>
 <div class="timeline-scroll">
-<img src="t1.jpg" />
+<!-- <img src="t1.jpg" /> -->
 <img src="t2.jpg" />
 <img src="t3.jpg" />
 <img src="t4.jpg" />
@@ -146,22 +146,31 @@ ${d.extraImg?`<img src='${d.extraImg}' style='width:100%;max-width:320px;border-
 function check(i){const v=document.getElementById('ans'+i).value.toLowerCase().trim();if(v===data[i].a){document.getElementById('card'+i).classList.remove('hidden');event.target.parentElement.classList.add('hidden');}else{alert(i===data.length-1?'No 😌 Try again':'That’s not it 💔 Try again');}}
 </script>
 <!-- Image Lightbox Modal -->
-<div id="lightbox" class="lightbox hidden" onclick="closeLightbox()">
-<img id="lightbox-img" src="" />
+<div id="lightbox" class="lightbox hidden">
+  <img id="lightbox-img" src="" />
 </div>
 
 
 <script>
 // Add click event to timeline images after render
-setTimeout(()=>{
-document.querySelectorAll('.timeline-scroll img').forEach(img=>{
-img.addEventListener('click',()=>{
-document.getElementById('lightbox-img').src = img.src;
-document.getElementById('lightbox').classList.remove('hidden');
+// setTimeout(()=>{
+// document.querySelectorAll('.timeline-scroll img').forEach(img=>{
+// img.addEventListener('click',()=>{
+// document.getElementById('lightbox-img').src = img.src;
+// document.getElementById('lightbox').classList.remove('hidden');
+// });
+// });
+// },500);
+document.querySelectorAll('.timeline-scroll img').forEach(img => {
+  img.addEventListener('click', () => {
+    document.getElementById('lightbox-img').src = img.src;
+    document.getElementById('lightbox').classList.add('active');
+  });
 });
-});
-},500);
 
+document.getElementById('lightbox').addEventListener('click', () => {
+  document.getElementById('lightbox').classList.remove('active');
+});
 
 function closeLightbox(){
 document.getElementById('lightbox').classList.add('hidden');
@@ -170,22 +179,27 @@ document.getElementById('lightbox').classList.add('hidden');
 
 
 <style>
-.lightbox{
-position:fixed;
-inset:0;
-background:rgba(0,0,0,0.85);
-display:flex;
-align-items:center;
-justify-content:center;
-z-index:9999;
-padding:20px;
+.lightbox {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  display: none; /* IMPORTANT */
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  padding: 20px;
 }
-.lightbox img{
-max-width:95%;
-max-height:90%;
-border-radius:18px;
-box-shadow:0 20px 40px rgba(0,0,0,0.5);
-animation:zoomIn .3s ease;
+
+.lightbox.active {
+  display: flex;
+}
+
+.lightbox img {
+  max-width: 95%;
+  max-height: 90%;
+  border-radius: 18px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+  animation: zoomIn .3s ease;
 }
 @keyframes zoomIn{
 from{transform:scale(.8);opacity:0}
